gccida/c3/recog_23
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28588:10: error: conflicting types for 'recog_23'
__int64  recog_23( rtx x0, rtx insn, int *pnum_clobbers) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28124:12: note: previous declaration is here
static int recog_23 PARAMS ((rtx, rtx, int *));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28812:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28816:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28823:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( recog_data_0.operand[0] = v9, !ix86_match_ccmode( insn, CCGCmode)) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28824:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( result = 213LL, recog_data_0.operand[2]->fld[0].rtint == 0x80000000) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28832:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28842:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v12; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28848:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v182 + 8), recog_data_0.operand[1]) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28849:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v182 + 16), recog_data_0.operand[2]) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28853:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v15 = ix86_binary_operator_ok( MINUS, SImode, recog_data_0.operand); 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28864:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v12; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28867:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v14 + 8), recog_data_0.operand[1]) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28868:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v14 + 16), recog_data_0.operand[2]) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28871:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v15 = ix86_binary_operator_ok( MINUS, SImode, recog_data_0.operand); 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28886:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v16; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28890:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v17; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28900:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v186; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28903:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[1] == 66 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/insn-recog.c:28905:8: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v187 = recog_data_0.operand[2]; 
       ^~~~~~~~~~~~
       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_23/src/obj/insn-recog.o] Error 1
